--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1 align="center">John McAfee Dick Tracker v2</h1>
 <!-- Display the countdown timer in an element -->
-<p id="demo"></p>
+<p align="center" id="demo"></p>
 
 <script>
 // Set the date we're counting down to
