--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 align="center">John McAfee Dick Tracker v2</h1>
+<h1 align="center" font="Gothic">John McAfee Dick Tracker v2</h1>
 <!-- Display the countdown timer in an element -->
-<p align="center" id="demo"></p>
+<p align="center" id="demo" font="Gothic"></p>
 
 <script>
 // Set the date we're counting down to
