--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 align="center" style="font-family:courier">John McAfee Dick Tracker v2</h1>
-<!-- Display the countdown timer in an element -->
-<p align="center" id="demo" style="font-family:courier"></p>
+<h1 align="center" style="font-family:courier">John McAfee Dick Tracker</h1>
+
+<p align="center" id="demo" style="font-family:courier">Time until John McAfee has to eat his dick.</p>
 
 <script>
 // Set the date we're counting down to
