--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
 <h1 align="center" style="font-family:courier">John McAfee Dick Tracker</h1>
 
-<p align="center" id="demo" style="font-family:courier">Time until John McAfee has to eat his dick.</p>
+<p align="center" style="font-family:courier">Time until John McAfee has to eat his dick.</p>
+<p align="center" id="demo" style="font-family:courier"></p>
 
 <script>
 // Set the date we're counting down to
