--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <p align="center" style="font-family:courier">Time until John McAfee has to eat his dick.</p>
 <p align="center" id="demo" style="font-family:courier"></p>
 
+<p>
+    <div>Example price: <span data-btc-price="1.0">1.0 BTC</span></div>
+</p>
+
 <script>
 // Set the date we're counting down to
 var countDownDate = new Date("Jan 5, 2018 15:37:25").getTime();
