--- a/index.html
+++ b/index.html
@@ -6,91 +6,9 @@
 <p align="center" style="font-family:courier">Time until John McAfee has to eat his dick.</p>
 <p align="center" id="demo" style="font-family:courier"></p>
 
-<div class="btcwdgt-price"></div>
+<div align="center" class="btcwdgt-price"></div>
+<img align="center" src="http://imgur.com/a/RFexE" alt="some_text" style="width:width;height:height;">
 
-<script>
-// Set the date we're counting down to
-var countDownDate = new Date("Jan 5, 2018 15:37:25").getTime();
-
-// Update the count down every 1 second
-var x = setInterval(function() {
-
-  // Get todays date and time
-  var now = new Date().getTime();
-
-  // Find the distance between now an the count down date
-  var distance = countDownDate - now;
-
-  // Time calculations for days, hours, minutes and seconds
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-  // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
-
-  // If the count down is finished, write some text 
-  if (distance < 0) {
-    clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
-  }
-}, 1000);
-</script>
-<script src="bitcoinprices.js"></script>
-<script>
-    $(document).ready(function() {
-        bitcoinprices.init({
-
-            // Where we get bitcoinaverage data
-            url: "https://api.bitcoinaverage.com/ticker/all",
-
-            // Which of bitcoinaverages value we use to present prices
-            marketRateVariable: "24h_avg",
-
-            // Which currencies are in shown to the user
-            currencies: ["BTC", "USD", "EUR", "CNY"],
-
-            // Special currency symbol artwork
-            symbols: {
-                "BTC": "<i class='fa fa-btc'></i>"
-            },
-
-            // Which currency we show user by the default if
-            // no currency is selected
-            defaultCurrency: "BTC",
-
-            // How the user is able to interact with the prices
-            ux : {
-                // Make everything with data-btc-price HTML attribute clickable
-                clickPrices : true,
-
-                // Build Bootstrap dropdown menu for currency switching
-                menu : true,
-
-                // Allow user to cycle through currency choices in currency:
-
-                clickableCurrencySymbol:  true
-            },
-
-            // Allows passing the explicit jQuery version to bitcoinprices.
-            // This is useful if you are using modular javascript (AMD/UMD/require()),
-            // but for most normal usage you don't need this
-            jQuery: jQuery,
-
-            // Price source data attribute
-            priceAttribute: "data-btc-price",
-
-            // Price source currency for data-btc-price attribute.
-            // E.g. if your shop prices are in USD
-            // but converted to BTC when you do Bitcoin
-            // checkout, put USD here.
-            priceOrignalCurrency: "BTC"
-
-        });
-    });
-</script>
 <script>
   (function(b,i,t,C,O,I,N) {
     window.addEventListener('load',function() {
