--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <p align="center" style="font-family:courier">Time until John McAfee has to eat his dick.</p>
 <p align="center" id="demo" style="font-family:courier"></p>
 
-<div align="center" class="btcwdgt-price"></div>
-<img align="center" src="http://imgur.com/a/RFexE" alt="some_text" style="width:width;height:height;">
+<div style="margin:0" class="btcwdgt-price"></div>
+<img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com">
 
 <script>
   (function(b,i,t,C,O,I,N) {
