--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p align="center" id="demo" style="font-family:courier"></p>
 
 <div style="margin:0" class="btcwdgt-price"></div>
-<img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com">
+<blockquote class="imgur-embed-pub" lang="en" data-id="RhD8tU8"><a href="//imgur.com/RhD8tU8">LUL</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
 <script>
   (function(b,i,t,C,O,I,N) {
