--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <p align="center" style="font-family:courier">Time until John McAfee has to eat his dick.</p>
 <p align="center" id="demo" style="font-family:courier"></p>
 
-<div style="margin:0" class="btcwdgt-price"></div>
+<div id="outer" style="width:100%">
+  <div class="btcwdgt-price"></div>
+</div>
 <blockquote class="imgur-embed-pub" lang="en" data-id="RhD8tU8"><a href="//imgur.com/RhD8tU8">LUL</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
 <script>
