--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <div id="outer" style="width:100%">
   <div class="btcwdgt-price"></div>
 </div>
-<blockquote class="imgur-embed-pub" lang="en" data-id="RhD8tU8"><a href="//imgur.com/RhD8tU8">LUL</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-
+<a href="//imgur.com/RhD8tU8">LUL</a>
+<p align="center" style="font-family:courier">LTC address</p>
 <script>
   (function(b,i,t,C,O,I,N) {
     window.addEventListener('load',function() {
