--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
 <body>
+<style type="text/css">
+#inner {
+  display: table;
+  margin: 0 auto;
+}
+</style>
 <h1 align="center" style="font-family:courier">John McAfee Dick Tracker</h1>
 
 <p align="center" style="font-family:courier">Time until John McAfee has to eat his dick.</p>
 <p align="center" id="demo" style="font-family:courier"></p>
 
 <div id="outer" style="width:100%">
-  <div class="btcwdgt-price"></div>
+  <div id ="inner" class="btcwdgt-price"></div>
 </div>
-<a href="//imgur.com/RhD8tU8">LUL</a>
-<p align="center" style="font-family:courier">LTC address</p>
+<blockquote class="imgur-embed-pub" lang="en" data-id="RhD8tU8"><a href="//imgur.com/RhD8tU8">LUL</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+<p align="center" style="font-family:courier">LTC</p>
 <script>
   (function(b,i,t,C,O,I,N) {
     window.addEventListener('load',function() {
