--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<style type="text/css">
-#inner {
-  display: table;
-  margin: 0 auto;
-}
-</style>
 <h1 align="center" style="font-family:courier">John McAfee Dick Tracker</h1>
 
 <p align="center" style="font-family:courier">Time until John McAfee has to eat his dick.</p>
@@ -16,7 +10,7 @@
   <div id ="inner" class="btcwdgt-price"></div>
 </div>
 <blockquote class="imgur-embed-pub" lang="en" data-id="RhD8tU8"><a href="//imgur.com/RhD8tU8">LUL</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-<p align="center" style="font-family:courier">LTC</p>
+<p align="center" style="font-family:courier">BTC tip jar: 32eGJ8GauhzjEvZupURA5esXCQxQETtzjw</p>
 <script>
   (function(b,i,t,C,O,I,N) {
     window.addEventListener('load',function() {
