--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="outer" style="width:100%">
   <div id ="inner" class="btcwdgt-price"></div>
 </div>
-<blockquote class="imgur-embed-pub" lang="en" data-id="RhD8tU8"><a href="//imgur.com/RhD8tU8">LUL</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+<img src="jma.png" alt="LUL" style="width:width;height:height;">
 <p align="center" style="font-family:courier">BTC tip jar: 32eGJ8GauhzjEvZupURA5esXCQxQETtzjw</p>
 <script>
   (function(b,i,t,C,O,I,N) {
