--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p align="center" id="demo" style="font-family:courier"></p>
 
 <div id="outer" style="width:100%">
-  <div id ="inner" class="btcwdgt-price" style="display:table;margin: 0 auto;""></div>
+  <div id ="inner" class="btcwdgt-price" style="display:table;margin: 0 auto;"></div>
 </div>
 <img src="jma.png" alt="LUL" style="width:width;height:height;display:block;margin: 0 auto;">
 <p align="center" style="font-family:courier">BTC tip jar: 32eGJ8GauhzjEvZupURA5esXCQxQETtzjw</p>
