--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <p align="center" style="font-family:courier">Time until John McAfee has to eat his dick.</p>
 <p align="center" id="demo" style="font-family:courier"></p>
 
-<div id="outer" style="width:100%">
-  <div id="inner" class="btcwdgt-price" style="display:table;margin: 0 auto;"></div>
+<div align="center">
+  <div class="btcwdgt-price"></div>
 </div>
 
 <img src="jma.png" alt="LUL" style="width:width;height:height;display:block;margin: 0 auto;">
