--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <h1 align="center" style="font-family:courier">John McAfee Dick Tracker</h1>
 
 <p align="center" style="font-family:courier">Time until John McAfee has to eat his dick.</p>
-<p align="center" id="demo" style="font-family:courier"></p>
+<h2 align="center" id="demo" style="font-family:courier"></h2>
 
-<div align="center">
+<div align="center" style="padding-bottom: 1cm">
   <div class="btcwdgt-price"></div>
 </div>
 
@@ -14,7 +14,7 @@
 
 
 
-<p align="center" style="font-family:courier">BTC tip jar: 32eGJ8GauhzjEvZupURA5esXCQxQETtzjw</p>
+<p align="center" style="font-family:courier;padding-bottom: 1cm">BTC tip jar: 32eGJ8GauhzjEvZupURA5esXCQxQETtzjw</p>
 
 
 
